# advent-of-code-2024

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  get_input.py  pyproject.toml  run_tests.ps1
01/: day_01_part1.py  part2.py  test_day_01.py  tests.py
02/: day_02_part2.py  part1.py  part2.py  test_day_02.py  tests.py
03/: day_03_part1.py  day_03_part2.py  test_day_03.py  tests.py
04/: day_04_part1.py  day_04_part2.py  test_day_04.py
05/: day_05_part1.py  day_05_part2.py  test_day_05.py
06/: day_06_part1.py  day_06_part2.py  test_day_06.py
07/: day_07_part1.py  day_07_part2.py  test_day_07.py
08/: day_08_part1.py  day_08_part2.py  test_day_08.py
09/: day_09_part1.py  day_09_part2.py  test_day_09.py
10/: day_10_part1.py  day_10_part2.py  test_day_10.py
11/: day_11_part1.py  day_11_part2.py  test_day_11.py
12/: day_12_part1.py  day_12_part2.py  test_day_12.py
13/: day_13_part1.py  day_13_part2.py  test_day_13.py
src/aoc/d01/: part1.py  part2.py  test_01.py
src/aoc/d02/: part1.py  part2.py  test_02.py
src/aoc/d03/: part1.py  part2.py  test_03.py
src/aoc/d04/: part1.py  part2.py  test_04.py
src/aoc/d05/: part1.py  part2.py  test_05.py
src/aoc/d06/: part1.py  part2.py  test_06.py
src/aoc/d07/: part1.py  part2.py  test_07.py
src/aoc/d08/: part1.py  part2.py  test_08.py
src/aoc/d09/: part1.py  part2.py  test_09.py
src/aoc/d10/: part1.py  part2.py  test_10.py
src/aoc/d11/: part1.py  part2.py  test_11.py
src/aoc/d12/: part1.py  part2.py  test_12.py
template/: part1.py  test.py.jinja  tests.py
(+42 files in other folders)
