[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
authors = [
    { name = "Michael Wall", email = "michael@horswall.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.4",
    "networkx>=3.4.2",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
